Fixed dark mode on pin-overlay

--- a/next-app/src/app/[lng]/globals.css
+++ b/next-app/src/app/[lng]/globals.css
@@ -1,5 +1,14 @@
 @import "tailwindcss";
 @custom-variant dark (&:where(.dark, .dark *));
+@layer utilities {
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+  .no-scrollbar {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+  }
+}
 
 :root {
   --background: #ffffff; /* Light mode background */
